--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,7 @@
-<div class="Gloss">
-  {{liquid-outlet}}
-</div>
+{{liquid-outlet}}
 
 {{gloss-message
+  title=title
   header=messageHeader
   subheader=messageSubheader
   isShowingMessage=isShowingMessage
