--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -11,7 +11,7 @@
 
   &--shown {
     z-index: 50;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0,0,0,0.9);
   }
 
   &--underlay {
@@ -19,10 +19,11 @@
   }
 
   h2, h3 {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
-    text-align: right;
+    text-align: center;
     font-family: 'EVE Sans', sans-serif;
+    width: fit-content;
   }
 
   h3 {
@@ -38,5 +39,12 @@
       border-right: none;
       animation: none;
     }
+  }
+
+  > div,
+  > div > div,
+  > div > div > div {
+    width: 100%;
+    height: 100%;
   }
 }
