--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,11 +1,42 @@
-<div class="Gloss-module Gloss-module--y Gloss-hud">
+<div class="Gloss">
   {{gloss-stats
     system=system
     loadUiElements=loadUiElements
     isConnected=isConnected
     }}
 
+  <div class="ui grid">
+    <div class="two column row no-gutter">
+      <div class="column">
+        {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small'}}Local <span class="Gloss-button--detail">{{fleets.length}}</span>{{/link-to}}
+      </div>
+
+      <div class="column">
+        {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Tracker <span class="Gloss-button--detail">{{tracked.length}}</span>{{/link-to}}
+      </div>
+
+      {{!-- <div class="column">
+        {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Search{{/link-to}}
+      </div> --}}
+    </div>
+  </div>
+
   <div class="Gloss-viewport">
+    {{#unless (and loadNotifications fleets.length)}}
+      <div class="ui active inverted text loader">Loading</div>
+    {{/unless}}
+
+    {{#liquid-if (and loadUiElements fleets.length) class="ui-fade-6"}}
+        <div class="ui grid padded">
+          <div class="row">
+            {{outlet}}
+          </div>
+        </div>
+    {{/liquid-if}}
+  </div>
+</div>
+
+  {{!-- <div class="Gloss-viewport">
     {{#liquid-if loadUiElements class="ui-fade"}}
       <div class="Gloss-module Gloss-module--x Gloss-flex--wrap Gloss-flex--start">
 
@@ -37,21 +68,29 @@
     {{else}}
       <p>Loading...</p>
     {{/liquid-if}}
-  </div>
 
-  <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
-    {{gloss-shard
-      label=character.name
-      loaded=loadUiElements
-      loadOrder=5
-      align="left"
-      }}
+  </div> --}}
 
-    {{gloss-shard
-      label=(if character.online 'online' 'offline')
-      loaded=loadUiElements
-      loadOrder=6
-      align="right"
-      }}
-  </div>
-</div>
+{{!-- <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
+
+  {{gloss-shard
+    label=(app-version)
+    loaded=loadUiElements
+    loadOrder=5
+    align="left"
+    }}
+
+  {{gloss-shard
+    label=character.name
+    loaded=loadUiElements
+    loadOrder=6
+    }}
+
+  {{gloss-shard
+    label=(if character.online 'online' 'offline')
+    loaded=loadUiElements
+    loadOrder=7
+    align="right"
+    }}
+
+</div> --}}
