--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -19,7 +19,16 @@ p {
   color: $secondary;
 }
 
-.p0 { padding: 0; }
+ul {
+  list-style-type: none;
+  padding: 0;
+
+  li {
+    color: $secondary;
+  }
+}
+
+.p0 { padding: 0 !important; }
 
 .Gloss {
   width: 100%;
@@ -36,15 +45,39 @@ p {
   align-items: center;
 }
 
+.Gloss-sidebar {
+  position: fixed;
+  width: 22vw;
+  left: 100vw;
+  top: 6.25rem;
+  bottom: 2vh;
+  overflow: hidden;
+  // background: darken($secondary, 35) !important
+  background: rgba(black, 0.5);
+  opacity: 0;
+
+  transition:
+    opacity 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95),
+    left 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95)
+  ;
+
+  &--shown {
+    left: 78vw;
+    opacity: 1;
+  }
+}
+
 .Gloss-viewport {
   width: 98vw;
-  max-height: $viewport-y;
+  height: 90vh;
   overflow-y: auto;
-  bottom: 0;
+  flex: 2;
+
+  transition: width 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
   > div,
   > div > div {
-    height: $viewport-y;
+    height: 100%;
   }
 
   .Gloss-shard h2,
@@ -55,6 +88,10 @@ p {
     @media screen and (max-width: 375px) {
       padding: 0;
     }
+  }
+
+  &--reduced {
+    width: 76vw;
   }
 }
 
@@ -150,6 +187,20 @@ p {
   margin: 0;
   height: 5.6875rem;
 
+  &--centered {
+    text-align: center;
+    margin-top: 4rem;
+    height: 4rem;
+  }
+
+  &--subtext {
+    font-size: 1.2rem;
+    text-align: center;
+    height: auto;
+    letter-spacing: 0.4rem;
+    color: darken($primary, 70);
+  }
+
   &--container {
     position: absolute;
     top: 0;
@@ -159,6 +210,20 @@ p {
     background-color: rgba(0,0,0,0.0);
     height: 5.6875rem;
   }
+}
+
+.Gloss-version {
+  text-transform: lowercase;
+  text-align: center;
+  font-weight: 300;
+  font-size: 1.5rem;
+  color: darken($primary, 60);
+}
+
+.Gloss-copyright {
+  color: darken($secondary, 15);
+  font-size: 0.85rem;
+  line-height: 1.4rem;
 }
 
 .Gloss--highlight,
@@ -173,9 +238,30 @@ strong {
 
 .Gloss-fixed {
   position: fixed;
-  width: 100%;
+  width: 100vw;
+  padding: 2rem 1rem;
 
   &--bottom {
     bottom: 0;
+  }
+}
+
+.Gloss-input {
+  &.ui.input input[type="text"] {
+    font-size: 2rem;
+    // text-transform: uppercase;
+    letter-spacing: 5px;
+    color: darken($secondary, 15);
+    padding-left: 2rem !important;
+
+    transition: color 175ms ease;
+
+    &::placeholder {
+      color: darken($secondary, 15);
+    }
+
+    &:focus {
+      color: $primary;
+    }
   }
 }
