--- a/app/styles/components/gloss-message.scss
+++ b/app/styles/components/gloss-message.scss
@@ -7,7 +7,7 @@
   z-index: -1;
   background-color: rgba(0,0,0,0.0);
 
-  transition: 500ms background-color ease-in-out;
+  transition: background-color 500ms ease-in-out;
 
   &--shown {
     z-index: 50;
