--- a/app/styles/components/gloss-notification.scss
+++ b/app/styles/components/gloss-notification.scss
@@ -9,42 +9,14 @@
     max-width: 320px;
     overflow-x: hidden !important;
 
-    &::before {
-      content: '';
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: 2rem;
-      z-index: 20;
-      background: linear-gradient(
-        black,
-        rgba(0, 0, 0, 0.001)
-      );
-    }
-
-    &::after {
-      content: '';
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 2rem;
-      z-index: 20;
-      background: linear-gradient(
-        rgba(0, 0, 0, 0.001),
-        black
-      );
-    }
-
     > .liquid-container {
-      width: 340px;
-      height: $viewport-y;
-      overflow-y: auto !important;
-
-      > .liquid-child > :first-child {
+      > :first-child {
         margin-top: 1rem;
       }
+
+      width: 340px;
+      height: $viewport-y - 10vh;
+      overflow-y: auto !important;
     }
   }
 
@@ -62,7 +34,6 @@
   cursor: pointer;
   padding: 0.75rem 0 0.75rem 0.75rem;
   color: $secondary;
-  font-weight: 600;
 
   &--time {
     font-size: 0.7rem;
