--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -6,27 +6,39 @@
     }}
 
   <div class="ui grid">
-    <div class="two column row no-gutter">
+    <div class="three column row no-gutter p0 mt2 mb2">
       <div class="column">
-        {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small'}}Local <span class="Gloss-button--detail">{{fleets.length}}</span>{{/link-to}}
+        {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small'}}
+          Local <span class="Gloss-button--detail">{{fleets.length}}</span>
+        {{/link-to}}
       </div>
 
       <div class="column">
-        {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Tracker <span class="Gloss-button--detail">{{tracked.length}}</span>{{/link-to}}
+        {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}
+          Tracker <span class="Gloss-button--detail">{{tracked.length}}</span>
+        {{/link-to}}
       </div>
 
       {{!-- <div class="column">
-        {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Search{{/link-to}}
+        {{#link-to 'navigate.search' class='Gloss-button Gloss-button--small'}}
+          Search
+        {{/link-to}}
       </div> --}}
+
+      <div class="column">
+        <a class="Gloss-button Gloss-button--small {{if showKillStream 'active'}}" {{action 'toggleKillStream' this}}>
+          Killstream <span class="Gloss-button--detail">{{kills.length}}</span>
+        </a>
+      </div>
     </div>
   </div>
 
-  <div class="Gloss-viewport">
-    {{#unless (and loadNotifications fleets.length)}}
+  <div class="Gloss-viewport {{if showKillStream 'Gloss-viewport--reduced'}}">
+    {{#unless (and loadNotifications (or fleets (eq fleets.length 0)))}}
       <div class="ui active inverted text loader">Loading</div>
     {{/unless}}
 
-    {{#liquid-if (and loadUiElements fleets.length) class="ui-fade-6"}}
+    {{#liquid-if loadNotifications class="ui-fade"}}
         <div class="ui grid padded">
           <div class="row">
             {{outlet}}
@@ -34,44 +46,22 @@
         </div>
     {{/liquid-if}}
   </div>
+
+  <div class="Gloss-sidebar {{if showKillStream 'Gloss-sidebar--shown'}}">
+    <div class="Gloss-notifier Gloss-module">
+      <div class="Gloss-stream Gloss-scroller">
+        {{#liquid-if loadNotifications class="ui-fade"}}
+          {{#each (sort-by 'time:desc' kills) as |notification|}}
+            {{gloss-notification
+              model=notification}}
+          {{/each}}
+        {{/liquid-if}}
+      </div>
+    </div>
+  </div>
 </div>
 
-  {{!-- <div class="Gloss-viewport">
-    {{#liquid-if loadUiElements class="ui-fade"}}
-      <div class="Gloss-module Gloss-module--x Gloss-flex--wrap Gloss-flex--start">
-
-        <div class="Gloss-module Gloss-module--y Gloss-flex--start Gloss-flex--3 Gloss-analysis">
-
-          <div class="Gloss-module Gloss-module--x Gloss-flex--end">
-            {{#link-to 'navigate.index' class='Gloss-button Gloss-button--small'}}Local{{/link-to}}
-
-            {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}Tracker{{/link-to}}
-          </div>
-
-          {{outlet class="ui-fade"}}
-
-        </div>
-
-        <div class="Gloss-module Gloss-module--y Gloss-flex--start">
-          <div class="Gloss-notifier Gloss-module">
-            <div class="Gloss-stream Gloss-scroller">
-              {{#liquid-if loadNotifications class="ui-fade"}}
-                {{#each (sort-by 'time:desc' kills) as |notification|}}
-                  {{gloss-notification
-                    model=notification}}
-                {{/each}}
-              {{/liquid-if}}
-            </div>
-          </div>
-        </div>
-      </div>
-    {{else}}
-      <p>Loading...</p>
-    {{/liquid-if}}
-
-  </div> --}}
-
-{{!-- <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
+<div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
 
   {{gloss-shard
     label=(app-version)
@@ -93,4 +83,4 @@
     align="right"
     }}
 
-</div> --}}
+</div>
