--- a/app/templates/navigate/index.hbs
+++ b/app/templates/navigate/index.hbs
@@ -76,5 +76,5 @@
 </div>
 
 {{#unless fleets.length}}
-  <p class="mt4">No threats reported in this sector.</p>
+  <p class="mt1 ml2">No threats reported in this sector.</p>
 {{/unless}}
