--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -47,9 +47,9 @@ ul {
 
 .Gloss-sidebar {
   position: fixed;
-  width: 22vw;
-  left: 100vw;
-  top: 6.25rem;
+  width: 300px;
+  right: -300px;
+  top: 7.25rem;
   bottom: 2vh;
   overflow: hidden;
   // background: darken($secondary, 35) !important
@@ -58,18 +58,18 @@ ul {
 
   transition:
     opacity 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95),
-    left 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95)
+    right 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95)
   ;
 
   &--shown {
-    left: 78vw;
+    right: 0;
     opacity: 1;
   }
 }
 
 .Gloss-viewport {
   width: 98vw;
-  height: 90vh;
+  height: calc(100vh - 6rem);
   overflow-y: auto;
   flex: 2;
 
@@ -91,7 +91,7 @@ ul {
   }
 
   &--reduced {
-    width: 76vw;
+    width: calc(98vw - 300px);
   }
 }
 
@@ -238,8 +238,8 @@ strong {
 
 .Gloss-fixed {
   position: fixed;
-  width: 100vw;
-  padding: 2rem 1rem;
+  width: 98vw;
+  padding: 0 0 3vh;
 
   &--bottom {
     bottom: 0;
