--- a/app/templates/navigate/constellation.hbs
+++ b/app/templates/navigate/constellation.hbs
@@ -8,5 +8,5 @@
 </div>
 
 {{#unless fleets.length}}
-  <p class="mt1 ml2">No threats reported in this system.</p>
+  <p class="mt1 ml2">No threats reported in this constellation.</p>
 {{/unless}}
