--- a/app/styles/_overrides.scss
+++ b/app/styles/_overrides.scss
@@ -109,7 +109,7 @@ a:hover {
   }
 
   &.modal {
-    top: -6vh !important;
+    top: 20% !important;
     max-height: 75vh !important;
     overflow-y: auto !important;
     z-index: 1001 !important;
