--- a/app/templates/components/gloss-shard.hbs
+++ b/app/templates/components/gloss-shard.hbs
@@ -1,6 +1,6 @@
 {{#liquid-if loaded class=loadOrderClass}}
 
-  <h5>{{label}}</h5>
+  <h5>{{liquid-bind label class="ui-fade-0"}}</h5>
 
   <h2>
     {{#if isNumeric}}
