--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -52,7 +52,6 @@ ul {
   top: 7.25rem;
   bottom: 2vh;
   overflow: hidden;
-  // background: darken($secondary, 35) !important
   background: rgba(black, 0.5);
   opacity: 0;
 
@@ -70,14 +69,18 @@ ul {
 .Gloss-viewport {
   width: 98vw;
   height: calc(100vh - 6rem);
-  overflow-y: auto;
+  overflow: hidden;
   flex: 2;
 
   transition: width 250ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
 
-  > div,
-  > div > div {
+  > .liquid-container {
+    overflow-y: auto !important;
     height: 100%;
+
+    > .liquid-child {
+      margin-bottom: 5vh;
+    }
   }
 
   .Gloss-shard h2,
