--- a/app/templates/navigate.hbs
+++ b/app/templates/navigate.hbs
@@ -1,19 +1,41 @@
-{{#ui-modal name="threat" class="threat inverted" onApprove=(action 'trackThreat' this)}}
+{{#ui-modal name="threat" class="threat inverted" onApprove=(action 'toggleTracking' this)}}
   <div class="header">
-    {{selectedFaction.name}}
+    {{selectedFaction.name}} <span class="type">{{selectedFaction.type}}</span>
   </div>
 
   <div class="image content">
-    <div class="ui small image">
-      <img src={{threatImageUrl}} />
+    <div class="ui tiny image">
+      {{#if selectedFaction}}
+        <img src={{threat-image-url selectedFaction}}>
+      {{/if}}
     </div>
 
     <div class="description">
-      <p>{{selectedFleet.characters.length}} pilots with {{selectedFleet.kills.length}} kills</p>
+      <span title="Pilots">
+        <i class="rocket icon"></i>
+        {{selectedFleet.characters.length}} pilot{{unless (eq selectedFleet.characters.length 1) 's'}}
+      </span>
 
-      <p>{{selectedShipType.count}} {{selectedShipType.name}} {{#if selectedShipCount}} + {{selectedShipCount}} others {{/if}}</p>
+      <span title="Kills">
+        <i class="fire icon" title="Kills"></i>
+        {{selectedFleet.kills.length}} kill{{unless (eq selectedFleet.kills.length 1) 's'}}
+      </span>
+
+      <span title="Threat Level">
+        <i class="exclamation circle icon"></i>
+        Threat level {{threat-level selectedFleet.dangerRatio}}
+      </span>
+
+      <span title="Status">
+        <i class="{{if selectedFleet.isActive 'play' 'stop'}} icon"></i>
+        Fleet {{if selectedFleet.isActive 'is active' 'has expired'}}
+      </span>
 
       <p>Last kill occurred {{moment-from-now selectedFleet.lastSeen}}</p>
+
+      {{#if latestBattleReport}}
+        <a href="{{latestBattleReport}}" target="_blank" title="View on zKill">Latest battle report <i class="external icon"></i></a>
+      {{/if}}
     </div>
   </div>
 
@@ -29,15 +51,17 @@
         </thead>
 
         <tbody>
-          {{#each (sort-by 'dangerRatio:desc' selectedFleet.characters) as |character|}}
+          {{#each (sort-by 'ship.name DESC' selectedFleet.characters) as |character|}}
             <tr class="Gloss-report--character">
               <td>{{#if (eq character.dangerRatio 0)}}N/A{{else}}{{character.dangerRatio}}%{{/if}}</td>
               <td><a href="{{zkill-character character}}" target="_blank">{{character.name}}</a></td>
               <td class="Gloss-report--ship">
                 {{#if character.ship}}
                   <img src="https://imageserver.eveonline.com/Type/{{character.ship.id}}_32.png" />
+                  {{character.ship.name}}
+                {{else}}
+                  Unknown vessel
                 {{/if}}
-                {{character.ship.name}}
               </td>
               <td>{{character.corporation.name}}</td>
               <td>{{if character.alliance character.alliance.name 'None'}}</td>
@@ -60,7 +84,7 @@
         <div class="Gloss-button Gloss-button--frameless Gloss-button--small positive">
           <i class="power icon"></i>
 
-          Track fleet
+          {{if selectedFleetIsTracked 'Stop tracking' 'Track fleet'}}
         </div>
       </div>
     </div>
@@ -69,7 +93,7 @@
 
 <div class="Gloss">
   {{gloss-stats
-    system=system
+    stats=stats
     loadUiElements=loadUiElements
     isConnected=isConnected
     }}
@@ -84,25 +108,29 @@
 
       <div class="column">
         {{#link-to 'navigate.constellation' class='Gloss-button Gloss-button--small'}}
-          {{system.constellation.name}} <span class="Gloss-button--detail">{{fleets.length}}</span>
+          {{constellation.name}} <span class="Gloss-button--detail">{{constellationFleets.length}}</span>
         {{/link-to}}
       </div>
 
       <div class="column">
         {{#link-to 'navigate.region' class='Gloss-button Gloss-button--small'}}
-          {{system.region.name}} <span class="Gloss-button--detail">{{fleets.length}}</span>
+          {{region.name}} <span class="Gloss-button--detail">{{regionFleets.length}}</span>
         {{/link-to}}
       </div>
 
       <div class="column">
         {{#link-to 'navigate.tracker' class='Gloss-button Gloss-button--small'}}
-          Tracker <span class="Gloss-button--detail">{{tracked.length}}</span>
+          Tracker <span class="Gloss-button--detail">{{trackedFleets.length}}</span>
         {{/link-to}}
       </div>
 
       <div class="column">
         <a class="Gloss-button Gloss-button--small {{if showKillStream 'active'}}" {{action 'toggleKillStream' this}}>
-          Kills <span class="Gloss-button--detail">{{kills.length}}</span>
+          Kills
+
+          <span class="Gloss-button--detail">
+            {{unless (eq context 'tracker') kills.length 'N/A'}}
+          </span>
         </a>
       </div>
     </div>
@@ -110,7 +138,7 @@
 
   <div class="Gloss-viewport {{if showKillStream 'Gloss-viewport--reduced'}}">
     {{#unless (and loadIntel (or systemFleets (eq systemFleets.length 0)))}}
-      <div class="ui active inverted text loader">Loading</div>
+      <div class="ui active inverted text loader">Connecting to Sentinel</div>
     {{/unless}}
 
     {{#liquid-if loadIntel class="ui-fade"}}
@@ -126,26 +154,32 @@
     <div class="Gloss-notifier Gloss-module">
       <div class="Gloss-stream Gloss-scroller">
         {{#liquid-if loadIntel class="ui-fade"}}
-          {{#each (sort-by 'time:desc' kills) as |notification|}}
+          {{#each killsRenderable as |notification|}}
             {{gloss-notification
-              model=notification}}
+              model=notification
+              context=context
+              }}
           {{/each}}
+
+          {{#if (not-eq killsRenderable.length kills.length)}}
+            <small>In your GLOSS display's interest of performance, only the last 200 kills are shown.</small>
+          {{/if}}
         {{/liquid-if}}
       </div>
     </div>
   </div>
 
   <div class="Gloss-module Gloss-module--x Gloss-flex--end Gloss-fixed Gloss-fixed--bottom">
-
     {{gloss-shard
-      label=(app-version)
+      label=(app-version hideSha=true)
       loaded=loadUiElements
       loadOrder=5
       align="left"
       }}
 
     {{gloss-shard
-      label=character.name
+      value=character.name
+      label=character.ship.name
       loaded=loadUiElements
       loadOrder=6
       }}
@@ -156,6 +190,5 @@
       loadOrder=7
       align="right"
       }}
-
   </div>
 </div>
