--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,3 +8,14 @@
   stopAnimating=stopAnimating
   shouldNotOverlay=shouldNotOverlay
   }}
+
+{{#if (eq environment 'production')}}
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-121371161-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-121371161-1');
+  </script>
+{{/if}}
