--- a/app/templates/navigate/tracker.hbs
+++ b/app/templates/navigate/tracker.hbs
@@ -21,5 +21,10 @@
 </div>
 
 {{#unless fleets.length}}
-  <p class="mt1 ml2">You aren't tracking any fleet movement.</p>
+  <p class="copy mt1 ml2">You aren't tracking any fleet movement.
+
+  To get started, select a fleet from one of the other panes and hit <span class="primary">Track Fleet</span>.
+
+    <small>Fleets are tracked through New Eden as they amass kills, and expire after 30 minutes of inactivity.</small>
+  </p>
 {{/unless}}
