--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -16,6 +16,6 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'UA-121371161-1');
+    gtag('config', '');
   </script>
 {{/if}}
