--- a/app/styles/utilities/_margin.scss
+++ b/app/styles/utilities/_margin.scss
@@ -1,29 +1,29 @@
-.m0 { margin: 0; }
-.m1 { margin: 1rem; }
-.m2 { margin: 2rem; }
-.m3 { margin: 3rem; }
-.m4 { margin: 4rem; }
+.m0 { margin: 0 !important; }
+.m1 { margin: 1rem !important; }
+.m2 { margin: 2rem !important; }
+.m3 { margin: 3rem !important; }
+.m4 { margin: 4rem !important; }
 
-.mt0 { margin-top: 0rem; }
-.mt1 { margin-top: 1rem; }
-.mt2 { margin-top: 2rem; }
-.mt3 { margin-top: 3rem; }
-.mt4 { margin-top: 4rem; }
+.mt0 { margin-top: 0rem !important; }
+.mt1 { margin-top: 1rem !important; }
+.mt2 { margin-top: 2rem !important; }
+.mt3 { margin-top: 3rem !important; }
+.mt4 { margin-top: 4rem !important; }
 
-.mr0 { margin-right: 0rem; }
-.mr1 { margin-right: 1rem; }
-.mr2 { margin-right: 2rem; }
-.mr3 { margin-right: 3rem; }
-.mr4 { margin-right: 4rem; }
+.mr0 { margin-right: 0rem !important; }
+.mr1 { margin-right: 1rem !important; }
+.mr2 { margin-right: 2rem !important; }
+.mr3 { margin-right: 3rem !important; }
+.mr4 { margin-right: 4rem !important; }
 
-.ml0 { margin-left: 0rem; }
-.ml1 { margin-left: 1rem; }
-.ml2 { margin-left: 2rem; }
-.ml3 { margin-left: 3rem; }
-.ml4 { margin-left: 4rem; }
+.ml0 { margin-left: 0rem !important; }
+.ml1 { margin-left: 1rem !important; }
+.ml2 { margin-left: 2rem !important; }
+.ml3 { margin-left: 3rem !important; }
+.ml4 { margin-left: 4rem !important; }
 
-.mb0 { margin-bottom: 0rem; }
-.mb1 { margin-bottom: 1rem; }
-.mb2 { margin-bottom: 2rem; }
-.mb3 { margin-bottom: 3rem; }
-.mb4 { margin-bottom: 4rem; }
+.mb0 { margin-bottom: 0rem !important; }
+.mb1 { margin-bottom: 1rem !important; }
+.mb2 { margin-bottom: 2rem !important; }
+.mb3 { margin-bottom: 3rem !important; }
+.mb4 { margin-bottom: 4rem !important; }
